--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "clean": "rm -rf node_modules && rm -rf yarn.lock && rm -rf ios/build && rm -rf ios/Podfile.lock && cd ios && pod deintegrate"
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.73.0"
+    "react-native": "0.73.0",
+    "react-native-reanimated": "^3.6.1",
+    "react-native-safe-area-context": "^4.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
